--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<div class="hero">
 		<nav>
-			<h2 class="logo"><span>Portfo</span>lio</h2>
+			<h2 class="logo"><span>tfo</span>lio</h2>
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About Us</a></li>
