--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="content">
 			<h4><b>Hi, my name is</b></h4>
 			<h1><span>Olaoluwa</span>Olayemi</h1>
-			<h3>I am a Web Developer and a <span>Data Analyist.</span></h3>
+			<h3>I am a Web Developer and a <span>Designer the founder of Wealth Hub Tech</span></h3>
 			<div class="newslatter">
 				<form>
 					<input type="email" name="email" id="mail" placeholder="Enter Your Email">
@@ -48,7 +48,6 @@
 				<h2>About Me</h2>
 				<h5>Developer <span>& Designer</span></h5>
 				<p>I am a front-end web developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations. A responsive design makes your website accessible to all users, regardless of their device.</p>
-				<p>I also do data analysis using PowerBI and Tableau. I am proficient in using SQL for querying databases</p>
 				<a href="olayemioluwa@gmail.com"<button type="button">Let's Talk</button></a>
 			</div>
 		</div>
@@ -84,12 +83,11 @@
 					</p>
 				</div>
 			</div>
-
 			<div class="card">
-				<i class="far fa-bell"></i>
-				<h5>Content Writing</h5>
+				<i class="far fa-user"></i>
+				<h5>Graphics Design</h5>
 				<div class="pra">
-					<p>Make your business visible to the world.</p>
+					<p>Get your customers' attention with a visual insight into your work and business.</p>
 
 					<p style="text-align: center;">
 						<a class="button" href="#">Learn More</a>
@@ -97,7 +95,30 @@
 				</div>
 			</div>
 
-			
+			<div class="card">
+				<i class="far fa-bell"></i>
+				<h5>Content Writing</h5>
+				<div class="pra">
+					<p>Captivate your customers with words on marble that attract them.</p>
+
+					<p style="text-align: center;">
+						<a class="button" href="#">Learn More</a>
+					</p>
+				</div>
+			</div>
+
+			<div class="card">
+				<i class="far fa-user"></i>
+				<h5>Video Editing</h5>
+				<div class="pra">
+					<p>Experience the magic of motion in growing your business.</p>
+
+					<p style="text-align: center;">
+						<a class="button" href="#">Learn More</a>
+					</p>
+				</div>
+			</div>
+
 			<div class="card">
 				<i class="far fa-bell"></i>
 				<h5>Google Analytics</h5>
@@ -126,8 +147,10 @@
 			<a href="https://www.facebook.com/solayemioluwa"><i class="fab fa-facebook-f"></i></a>
 			<a href="https://instagram.com/olayemiolaoluwasamuel"><i class="fab fa-instagram"></i></a>
 			<a href="https://twitter.com/OlayemiOlaoluwa"><i class="fab fa-twitter"></i></a>
+			<a href="https://wa.link/u7hsek"><i class="fab fa-whatsapp"></i></a>
+			<a href="https://wa.link/1yin3p"><i class="fab fa-whatsapp"></i></a>
 		</div>
-		<p class="end">CopyRight By Olaoluwa Olayemi</p>
+		<p class="end">CopyRight By Wealth Hub Tech</p> 
 	</footer>
 </body>
 </html>
