--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<!----About section start---->
 	<section class="about">
 		<div class="main">
-			<img src="img/main-img.jpg">
+			<img src="img/portfolio_image.jpg">
 			<div class="about-text">
 				<h2>About Me</h2>
 				<h5>Developer <span>& Designer</span></h5>
