--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	<!------Contact Me------>
 	<div class="contact-me">
 		<p>Let Me Get You A Beautiful Website.</p>
-		<a class="button-two" href="#">Hire Me</a>
+		<a class="button-two" href="https://wa.link/u7hsek">Hire Me</a>
 	</div>
 
 	<!------footer start--------->
