--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<h2>About Me</h2>
 				<h5>Developer <span>& Designer</span></h5>
 				<p>I am a front-end web developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations. A responsive design makes your website accessible to all users, regardless of their device.</p>
-				<a href="olayemioluwa@gmail.com"<button type="button">Let's Talk</button></a>
+				<a href="https://wa.link/u7hsek"<button type="button">Let's Talk</button></a>
 			</div>
 		</div>
 	</section>
