--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 	<!------Contact Me------>
 	<div class="contact-me">
-		<p>Let Me Get You A Beautiful Website.</p>
+		<p>Let Us Give Your Business a Voice.</p>
 		<a class="button-two" href="https://wa.link/u7hsek">Hire Me</a>
 	</div>
 
