--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<li><a href="#">Services</a></li>
 				<li><a href="#">Skills</a></li>
 				<li><a href="#">Contact Us</a></li>
-				<li><a href="team.html">Team</a></li>
+				<!-- <li><a href="team.html">Team</a></li -->
 			</ul>
 			<a href="#" class="btn">Subscribe</a>
 		</nav>
