--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 				<i class="fas fa-bars"></i>
 				<h5>Web Development</h5>
 				<div class="pra">
-					<p>Make your business visible to the world.</p>
+					<p>Transform your ideas into visually captivating websites that leave a lasting impression. 
+						We specialize in crafting unique, user-friendly websites tailored to your brand.</p>
 
 					<p style="text-align: center;">
 						<a class="button" href="#">Read More</a>
@@ -76,7 +77,8 @@
 				<i class="far fa-user"></i>
 				<h5>SEO Management</h5>
 				<div class="pra">
-					<p>Make your business visible to the world.</p>
+					<p>Navigate the complex world of search engines with ease. 
+						We optimize your website to rank higher, ensuring your business gets the attention it deserves.</p>
 
 					<p style="text-align: center;">
 						<a class="button" href="#">Learn More</a>
@@ -87,31 +89,7 @@
 				<i class="far fa-user"></i>
 				<h5>Graphics Design</h5>
 				<div class="pra">
-					<p>Get your customers' attention with a visual insight into your work and business.</p>
-
-					<p style="text-align: center;">
-						<a class="button" href="#">Learn More</a>
-					</p>
-				</div>
-			</div>
-
-			<div class="card">
-				<i class="far fa-bell"></i>
-				<h5>Content Writing</h5>
-				<div class="pra">
-					<p>Captivate your customers with words on marble that attract them.</p>
-
-					<p style="text-align: center;">
-						<a class="button" href="#">Learn More</a>
-					</p>
-				</div>
-			</div>
-
-			<div class="card">
-				<i class="far fa-user"></i>
-				<h5>Video Editing</h5>
-				<div class="pra">
-					<p>Experience the magic of motion in growing your business.</p>
+					<p>From logos to banners, our talented graphic designers breathe life into your brand, ensuring it's not just seen but remembered.</p>
 
 					<p style="text-align: center;">
 						<a class="button" href="#">Learn More</a>
@@ -123,7 +101,32 @@
 				<i class="far fa-bell"></i>
 				<h5>Google Analytics</h5>
 				<div class="pra">
-					<p>Understand how your business is progressing.</p>
+					<p>Data is power. We harness the power of Google Analytics to provide insights that drive informed decisions, helping your business grow strategically.</p>
+
+					<p style="text-align: center;">
+						<a class="button" href="#">Learn More</a>
+					</p>
+				</div>
+			</div>
+
+			<div class="card">
+				<i class="far fa-user"></i>
+				<h5>Video Editing</h5>
+				<div class="pra">
+					<p>Tell your story through captivating videos. 
+						Our skilled team crafts videos that not only showcase your products or services but also connect with your audience on a deeper level.</p>
+
+					<p style="text-align: center;">
+						<a class="button" href="#">Learn More</a>
+					</p>
+				</div>
+			</div>
+
+			<div class="card">
+				<i class="far fa-bell"></i>
+				<h5>Social Media Management</h5>
+				<div class="pra">
+					<p>Engage your audience on platforms that matter. Our experts handle social media campaigns, keeping your brand relevant and dynamic in the ever-evolving social landscape.</p>
 
 					<p style="text-align: center;">
 						<a class="button" href="#">Learn More</a>
